# desktop

./: .cursorignore  .gitignore  40-streamdeck.rules  ANALYSIS.md  ARCHITECTURE_COMPARISON.md  BLACK_SCREEN_FIX.md  BUILD_EXPLAINED.md  BUILD_FIX_SUMMARY.md  CAMERA_FIX_SUMMARY.md  CANVAS_COMPOSITOR_COMPLETE.md  CHROMA_KEY_FIX.md  CHROMA_KEY_IMPLEMENTATION.md  CHROMA_KEY_UPDATE.md  CLEAN_IMPLEMENTATION.md  CURRENT_ARCHITECTURE.md  Cargo.toml  DIAGNOSTIC_GUIDE.md  DIAGNOSTIC_LOGGING.md  DIRECT_RENDERING_COMPLETE.md  DIRECT_SURFACE_IMPLEMENTATION.md  DMX_COMPREHENSIVE_SUPPORT.md  DMX_HARDWARE_INTEGRATION.md  DMX_HARDWARE_REQUIREMENTS.md  DMX_IMPLEMENTATION_COMPLETE.md  ELIMINATE_BUILD_SCRIPT.md  ENTTEC_ODE_MK3_SETUP.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIX_SUMMARY.md  FRAME_LAG_FIX.md  FREEZE_FIX.md  FRONTEND_UPDATED.md  FX_COMPOSITOR_STATUS.md  FX_PLAYBACK_TIMING_FIX.md  GITHUB_SETUP.md  GPU_CHROMA_KEY_IMPLEMENTATION.md  GSTREAMER_SETUP.md  HOW_COMPOSITING_WORKS.md  (+90 more)
.cargo/: config.toml
.cursor/rules/: wgpu-compositor.md
capabilities/: main.json  tv-monitor.json
icons/: icon.icns
installer-assets/: installer-template.nsi  installer.nsi
scripts/: copy-dlls-to-bundle.ps1  create-repo.js  generate-license.js  generate-readme.js  release.js  update-repo-metadata.js
src/: chroma_key_shader.wgsl  clock.rs  compositor.wgsl  dmx_commands.rs  dmx_manager.rs  file_logger.rs  gstreamer_camera.rs  gstreamer_camera.rs.bak  gstreamer_composite.rs  gstreamer_composite_gpu.rs  main.rs  screen_capture.rs  streamdeck_diagnostics.rs  streamdeck_manager.rs  wgpu_composite.rs  wgpu_compositor.rs  wgpu_gstreamer_compositor.rs  wgpu_surface_renderer.rs
src/compositor/: layer.rs  mod.rs  wgpu_compositor.rs
src/gst/: input.rs  mod.rs  output.rs  utils.rs
wgpu-compositor/: Cargo.toml
