[package]
name = "battles-desktop"
version = "2.0.1"
description = "Pro TikTok Tools"
authors = ["BATTLES™"]
license = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["macos-private-api", "webview-data-url", "unstable"] }
tokio = { version = "1.0", features = ["time", "rt", "sync", "net", "macros"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
base64 = "0.22"
urlencoding = "2.1"
lazy_static = "1.5"
parking_lot = "0.12"
shared_memory = "0.12"
chrono = "0.4"
ureq = { version = "2.10", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["blocking"] }

# GStreamer - Professional video pipeline with static features (no pkg-config needed)
gstreamer = { version = "0.24", features = ["v1_20"] }
gstreamer-app = { version = "0.24", features = ["v1_20"] }
gstreamer-video = { version = "0.24", features = ["v1_20"] }
gstreamer-audio = { version = "0.24", features = ["v1_20"] }
gstreamer-sys = { version = "0.24", features = ["v1_20"] }
glib = "0.20"
image = { version = "0.25", features = ["png"] }
tauri-plugin-cache = "0.1"

# GPU Compositor - Native wgpu + WGSL for real-time alpha blending
wgpu = "27.0.1"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
thiserror = "1.0"
tokio-util = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
