[package]
name = "wgpu-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.30"
glam = "0.29"
gstreamer = "0.22"
gstreamer-video = "0.22"
gstreamer-app = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"
futures = "0.3"
log = "0.4"
env_logger = "0.11"